<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name">MonTransit</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="nearby">Nearby</string>
    <string name="map">Map</string>
    <string name="trip_planner">Trip Planner</string>
    <string name="news">News</string>
    <string name="settings">Settings</string>
    <string name="customer_service">Customer Service</string>
    <string name="rate_review">Review App</string>
    <string name="support">Support MonTransit</string>
    <string name="send_feedback_email">mtransit.apps@gmail.com</string>
    <string name="menu_action_nearby">Nearby</string>
    <string name="menu_action_search">Search</string>
    <string name="search_hint">Search MonTransit</string>
    <string name="search_no_result_for_and_query">No results for %s</string>
    <string name="all">All</string>
    <string name="more">More</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="cancel">Cancel</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="agency_type_ferry_short_name">Ferry</string>
    <string name="agency_type_ferry_all">Ferries</string>
    <string name="agency_type_ferry_stations_short_name">Ferries Stations</string>
    <string name="agency_type_ferry_nearby">Nearby Stations</string>
    <string name="agency_type_light_rail_short_name">Streetcar</string>
    <string name="agency_type_light_rail_all">Streetcars</string>
    <string name="agency_type_light_rail_stations_short_name">Streetcars Stops</string>
    <string name="agency_type_light_rail_nearby">Nearby Stops</string>
    <string name="agency_type_subway_short_name">Subway</string>
    <string name="agency_type_subway_all">Subways</string>
    <string name="agency_type_subway_stations_short_name">Subway Stations</string>
    <string name="agency_type_subway_nearby">Nearby Stations</string>
    <string name="agency_type_rail_short_name">Train</string>
    <string name="agency_type_rail_all">Trains</string>
    <string name="agency_type_rail_stations_short_name">Train Stations</string>
    <string name="agency_type_rail_nearby">Nearby Stations</string>
    <string name="agency_type_bus_short_name">Bus</string>
    <string name="agency_type_bus_all">Buses</string>
    <string name="agency_type_bus_stops_short_name">Bus Stops</string>
    <string name="agency_type_bus_nearby">Nearby Stops</string>
    <string name="agency_type_bike_short_name">Bike</string>
    <string name="agency_type_bike_all">Bikes</string>
    <string name="agency_type_bike_stations_short_name">Bike Stations</string>
    <string name="agency_type_bike_nearby">Nearby Stations</string>
    <string name="agency_type_place_short_name">Place</string>
    <string name="agency_type_place_all">Places</string>
    <string name="agency_type_place_app_short_name">Places</string>
    <string name="agency_type_place_nearby">Nearby Places</string>
    <string name="agency_type_module_short_name">+</string>
    <string name="agency_type_module_all">Agencies</string>
    <string name="agency_type_module_app_short_name">Agencies</string>
    <string name="agency_type_module_nearby">Nearby Agencies</string>
    <string name="agency_type_favorite_short_name">Favorite</string>
    <string name="agency_type_favorite_all">Favorites</string>
    <string name="agency_type_favorite_app_short_name">Favorites</string>
    <string name="agency_type_favorite_nearby">Nearby Favorites</string>
    <string name="agency_type_news_short_name">News</string>
    <string name="agency_type_news_all">News</string>
    <string name="agency_type_news_app_short_name">News</string>
    <string name="agency_type_news_nearby">Nearby News</string>
    <plurals name="app_disabled_issue_title">
        <item quantity="one">Agency disabled</item>
        <item quantity="other">Agencies disabled</item>
    </plurals>
    <string name="email">E-mail</string>
    <string name="tel">Phone Number</string>
    <string name="file">File</string>
    <string name="video">Video</string>
    <string name="facebook">Facebook</string>
    <string name="google_maps">Google Maps</string>
    <string name="twitter">Twitter</string>
    <string name="download_on_store">Download on Google Play</string>
    <string name="re_enable_app">Enable to resolve issue</string>
    <string name="view_on_store">View on Google Play</string>
    <string name="manage_app">App Management</string>
    <string name="uninstall">Uninstall</string>
    <string name="view_details">View Details</string>
    <string name="news_shared_on_and_author_and_source">%1$s on %2$s</string>
    <string name="no_news">No news.</string>
    <string name="latest_news">Latest News</string>
    <string name="no_favorites">No favorites.</string>
    <string name="favorite_removed">Favorite removed.</string>
    <string name="favorite_removed_to_folder_and_folder">Favorite removed from %s.</string>
    <string name="favorite_moved">Favorite moved.</string>
    <string name="favorite_moved_to_folder_and_folder">Favorite moved to %s.</string>
    <string name="favorite_added">Favorite added.</string>
    <string name="favorite_added_to_folder_and_folder">Favorite added to %s.</string>
    <string name="favorite_remove">- Remove from favorites</string>
    <string name="favorite_folder_new">+ New folder</string>
    <string name="favorite_folder_name_hint">Folder name</string>
    <string name="favorite_folder_new_create">Create folder</string>
    <string name="favorite_folder_edit">Rename folder</string>
    <string name="favorite_folder_new_cancel">Cancel</string>
    <string name="favorite_folder_new_invalid_name">Invalid folder name!</string>
    <string name="favorite_folder_new_creation_error_and_folder_name">Error while creating folder %s!</string>
    <string name="favorite_folder_new_created_and_folder_name">Folder %s created.</string>
    <string name="favorite_folder_deletion_error_and_folder_name">Error while deleting folder %s!</string>
    <string name="favorite_folder_deleted_and_folder_name">Folder %s deleted.</string>
    <string name="favorite_folder_deletion_confirmation_title_and_name">Delete %s?</string>
    <string name="favorite_folder_deletion_confirmation_text_and_name">Are you sure you want to delete the favorite folder %s?</string>
    <string name="favorite_folder_edited_and_folder">Folder renamed to %s.</string>
    <string name="favorite_folder_empty">(empty)</string>
    <string name="favorite_folder_pick">Select folder</string>
    <string name="favorite_folder_pick_ok">OK</string>
    <string name="favorite_folder_pick_cancel">Cancel</string>
    <string name="favorite_folder_default">(default)</string>
    <string name="location_permission_in_app_notification_label">Device location permission disabled.</string>
    <string name="location_permission_in_app_notification_label_onboarding">Get more precise recommendations.</string>
    <string name="location_permission_in_app_notification_action">ENABLE</string>
    <string name="location_settings_in_app_notification_label">Device location settings disabled.</string>
    <string name="location_settings_in_app_notification_action">ENABLE</string>
    <string name="module_disabled_in_app_notification_label">Agency disabled.</string>
    <string name="module_disabled_in_app_notification_label_and_agency">%s disabled.</string>
    <string name="module_disabled_in_app_notification_action">FIX</string>
    <string name="samsung_device_care">Device Care (Samsung)</string>
    <string name="new_location_in_app_notification_label">New location.</string>
    <string name="new_location_in_app_notification_action">REFRESH</string>
    <string name="no_results">No Results</string>
    <string name="world_explored">Planetary exploration completed</string>
    <string name="module_label">+</string>
    <string name="module_short_name">+</string>
    <string name="place_label">Places</string>
    <string name="place_short_name">Places</string>
    <string name="view_stop">View stop</string>
    <string name="view_stop_route">View stop route</string>
    <string name="view_stop_route_and_route">View route %s</string>
    <string name="add_fav">Add to favorites</string>
    <string name="remove_fav">Remove from favorites</string>
    <string name="edit_fav">Move/Remove favorite</string>
    <string name="menu_action_list">List</string>
    <string name="menu_action_grid">Grid</string>
    <string name="menu_action_map">Map</string>
    <string name="menu_action_favorite_folder_new">Create new favorite folder</string>
    <string name="menu_action_www">Open Web Browser</string>
    <string name="menu_action_filter">Filter</string>
    <string name="menu_action_show_directions">Directions</string>
    <string name="menu_action_show_today">Today</string>
    <string name="menu_action_sort">Sort</string>
    <string name="menu_action_refresh_available_version">&#8635; available versions</string>
    <string name="menu_action_force_refresh_available_version">&#8635; available versions!</string>
    <string name="menu_action_add_favorite">Add to favorites</string>
    <string name="menu_action_remove_favorite">Remove from favorites</string>
    <string name="menu_action_edit_favorite">Edit favorite</string>
    <string name="next_departures">Next Departures</string>
    <string name="availability">Availability</string>
    <string name="full_schedule">Full Schedule</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="local_time_and_time">%s local time</string>
    <string name="battery_optimization_issue_title">Battery optimization issues</string>
    <string name="battery_optimization_issue_message_1">Device manufacturers (Samsung, OnePlus, Huawei, Nokia, Xiaomi&#8230;) are changing the way Android works to save more battery and it\'s breaking apps.</string>
    <string name="battery_optimization_issue_message_2">Learn more at https://dontkillmyapp.com/.</string>
    <string name="battery_optimization_issue_message_1_and_manufacturer">Device manufacturers (like %s) are changing the way Android works to save more battery and it\'s breaking apps.</string>
    <string name="battery_optimization_issue_act">Fix</string>
    <string name="battery_optimization_issue_learn_more">Learn more</string>
    <string name="battery_optimization_samsung_use_device_care">Use <b>Samsung\'s Device Care</b> to add MonTransit apps to the <b>Never sleeping apps</b> to avoid having a problem in the future.</string>
    <string name="display_pref_cat_title">Display</string>
    <string name="theme_pref_title">Theme</string>
    <string name="theme_pref_summary">Light or Dark theme.</string>
    <string name="support_subs_pref_title">Support MonTransit</string>
    <string name="support_subs_pref_summary">Hide ads and support MonTransit development.</string>
    <string name="support_subs_pick_price">Pick your price ;)</string>
    <string name="support_subs_try_cancel">(1 month free, cancel anytime)</string>
    <string name="support_subs_buy_with_play">Buy with Google Play</string>
    <string name="support_subs_price_and_period_separator"> / </string>
    <string name="support_paid_tasks_incentive">No money? Earn Google Play credit by answering quick surveys from Google.</string>
    <string name="support_paid_tasks_incentive_open_btn">Open Google Opinion Rewards</string>
    <string name="support_paid_tasks_incentive_download_btn">Download Google Opinion Rewards</string>
    <plurals name="support_watch_rewarded_ad_btn_and_days">
        <item quantity="one">Watch an ad to\nget %d day ad-free</item>
        <item quantity="other">Watch an ad to\nget %d days ad-free</item>
    </plurals>
</resources>