<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/root_nav_home"
        android:icon="@drawable/ic_pin_drop_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@id/root_nav_favorites"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/favorites" />
    <item
        android:id="@id/root_nav_nearby"
        android:icon="@drawable/ic_my_location_black_24dp"
        android:title="@string/nearby" />
    <item
        android:id="@id/root_nav_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/map" />
    <item
        android:id="@id/nav_trip_planner"
        android:icon="@drawable/ic_directions_black_24dp"
        android:title="@string/trip_planner" />
    <item
        android:id="@id/root_nav_news"
        android:icon="@drawable/ic_newspaper_black_24dp"
        android:title="@string/news" />
</menu>