<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity">
    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_filter_list_black_24dp"
        android:title="@string/menu_action_sort"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_refresh_available_version"
        android:title="@string/menu_action_refresh_available_version"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/menu_force_refresh_available_version"
        android:title="@string/menu_action_force_refresh_available_version"
        app:showAsAction="never|withText" />
</menu>