<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:minWidth="?android:attr/listPreferredItemHeightLarge"
    android:minHeight="?android:attr/listPreferredItemHeightLarge">

    <LinearLayout
        android:id="@+id/viewFlipper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:orientation="vertical"
        android:padding="16dp">

        <include
            android:id="@+id/loading"
            layout="@layout/layout_loading_large"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/support_subs_pref_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/support_subs_pref_summary"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/beforeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/support_subs_pick_price"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic" />

        <LinearLayout
            android:id="@+id/priceSelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeightSmall"
                android:visibility="visible"
                tools:context=".ui.MainActivity"
                tools:listitem="@android:layout/simple_spinner_dropdown_item"
                tools:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support_subs_price_and_period_separator" />

            <Spinner
                android:id="@+id/period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeightSmall"
                android:visibility="visible"
                tools:context=".ui.MainActivity"
                tools:listitem="@android:layout/simple_spinner_dropdown_item"
                tools:visibility="visible" />
        </LinearLayout>

        <TextView
            android:id="@+id/afterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/support_subs_try_cancel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/buyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support_subs_buy_with_play" />

        <View
            android:id="@+id/paidTasksDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/baseline_16"
            android:layout_marginBottom="@dimen/baseline_16"
            android:background="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/paidTasksIncentive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="false"
            android:text="@string/support_paid_tasks_incentive"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/downloadOrOpenPaidTasksBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support_paid_tasks_incentive_download_btn"
            android:visibility="gone"
            tools:text="@string/support_paid_tasks_incentive_open_btn"
            tools:visibility="visible" />

        <View
            android:id="@+id/paidTasksDivider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/baseline_16"
            android:layout_marginBottom="@dimen/baseline_16"
            android:background="?attr/colorOnSurface"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/rewardedAdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="false"
            android:text="@string/support_paid_tasks_incentive"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/rewardedAdsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/support_watch_rewarded_ad_btn_and_days"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>
</ScrollView>