<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/platform_mtrl_alert_dialog_background_inset_start"
    android:paddingTop="@dimen/platform_abc_dialog_padding_top_material"
    android:paddingEnd="@dimen/platform_mtrl_alert_dialog_background_inset_end"
    android:paddingBottom="@dimen/platform_abc_dialog_padding_top_material">

    <TextView
        android:id="@+id/battery_optimization_issue_text_1"
        style="@style/MaterialAlertDialog.MaterialComponents.Body.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/battery_optimization_issue_message_1" />

    <ImageView
        android:id="@+id/battery_optimization_issue_img"
        android:layout_width="380dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/baseline_16"
        android:layout_marginBottom="@dimen/baseline_16"
        android:contentDescription="@null"
        android:scaleType="fitCenter"
        android:visibility="gone"
        tools:src="@tools:sample/backgrounds/scenic"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/battery_optimization_issue_text_2"
        style="@style/MaterialAlertDialog.MaterialComponents.Body.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/battery_optimization_issue_message_2" />

    <TextView
        android:id="@+id/battery_optimization_issue_custom"
        style="@style/MaterialAlertDialog.MaterialComponents.Body.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/baseline_16"
        tools:text="@string/battery_optimization_samsung_use_device_care"
        android:visibility="gone"
        tools:visibility="visible" />

</LinearLayout>